SERVER-56017 Support sort in covered queries in SBE